Stylen samen gevoegd zodat er minder regels zijn en duidelijkheid, js toegevoegd 🔨

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
+    <input type="checkbox" />
     <main>
       <article>
         <section>
@@ -23,6 +24,10 @@
               <li>
                 <h2>Naam</h2>
                 <p>Jamie Vos</p>
+              </li>
+              <li>
+                <h2>Plaats</h2>
+                <p>Alkmaar</p>
               </li>
               <li>
                 <h2>Geboortedatum</h2>
@@ -49,7 +54,9 @@
             </ul>
           </div>
           <div>
-            <p>>a>>>>Jamie>>Vos</p>
+            <p class="last-text">
+              >a>>>>Jamie>>Vos>>>>>>>>>> >>>>>>>>90210>>>>>>>>>>>>>>
+            </p>
           </div>
         </section>
       </article>
