fixes op mobiel 🐛

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <section>
           <img src="./assets/paspoort.png" />
         </section>
-
-        <section id="back2" class="section-passpoort-b"></section>
-        <section class="section-info">
+        <section></section>
+        <!-- Backside van de animatie -->
+        <section>
           <div>
             <h1>Republique Francaise</h1>
           </div>
