Meer bug fixes 🐛

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <section>
           <img src="./assets/paspoort.png" />
         </section>
-        <section></section>
         <!-- Backside van de animatie -->
+        <section></section>
         <section>
           <div>
             <h1>Republique Francaise</h1>
@@ -31,7 +31,7 @@
               </li>
               <li>
                 <h2>Geboortedatum</h2>
-                <p>16 05 2004</p>
+                <p class="geen-link">16 05 2004</p>
               </li>
               <li>
                 <h2>Studie</h2>
