:has, and new js functie ✨

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </section>
         <!-- Backside van de animatie -->
         <section></section>
-        <section>
+        <section class="asd">
           <div>
             <h1>Republique Francaise</h1>
           </div>
@@ -37,7 +37,7 @@
                 <h2>Studie</h2>
                 <p>Front-end development en design</p>
               </li>
-              <li>
+              <li class="alert">
                 <h2>Vooropleiding</h2>
                 <p>Software development</p>
               </li>
@@ -55,12 +55,12 @@
           </div>
           <div>
             <p class="last-text">
-              >a>>>>Jamie>>Vos>>>>>>>>>> >>>>>>>>90210>>>>>>>>>>>>>>
+              >a>>>>Jamie>>Vos>>>>>>>>>> >>>>>>90210>>Hover mij>>>
             </p>
           </div>
         </section>
       </article>
     </main>
   </body>
-  <script src="scripts/script.js"></script>
+  <script src="/scripts/script.js"></script>
 </html>
